# OmniMIDIv2

./: .gitignore  .gitmodules  LICENSE  README.md  vcpkg-configuration.json
OmniMIDI/: .gitignore  BASSSynth.cpp  BASSSynth.h  BASSSynth.hpp  CMakeLists.txt  Common.hpp  CompileWin32.bat  ErrSys.cpp  ErrSys.h  ErrSys.hpp  EvBuf_t.h  EvBuf_t.hpp  FluidSynth.cpp  FluidSynth.h  FluidSynth.hpp  HostSettings.hpp  KDMAPI.cpp  KDMAPI.h  KDMAPI.hpp  KSynthM.cpp  KSynthM.hpp  OMRes.aps  OMRes.rc  OmniMIDI.sln  OmniMIDI.vcxproj  OmniMIDI.vcxproj.filters  SHSettings.hpp  ShakraPipe.cpp  ShakraPipe.hpp  SoundFontSystem.cpp  SoundFontSystem.h  SoundFontSystem.hpp  SoundOut.h  StreamPlayer.cpp  StreamPlayer.h  StreamPlayer.hpp  SynthHost.cpp  SynthHost.hpp  SynthMain.cpp  SynthMain.h  (+29 more)
OmniMIDI/inc/: fluidsynth.h  ksynth.h  tsf.h  xsynth.h
OmniMIDI/inc/bass/: bass.h  bass_vst.h  bassasio.h  bassmidi.h  basswasapi.h
OmniMIDI/inc/fluidsynth/: audio.h  event.h  settings.h  synth.h  types.h
OmniMIDI/lib/: OmniMIDI_ARM.exp  OmniMIDI_ARM64.exp  OmniMIDI_Win32.exp  OmniMIDI_Win64.exp
OmniMIDI/src/: BASSSynth.cpp  BASSSynth.hpp  Common.hpp  ErrSys.cpp  ErrSys.hpp  EvBuf_t.hpp  FluidSynth.cpp  FluidSynth.hpp  HostSettings.hpp  KDMAPI.hpp  PluginSynth.cpp  PluginSynth.hpp  ShakraPipe.cpp  ShakraPipe.hpp  StreamPlayer.cpp  StreamPlayer.hpp  SynthHost.cpp  SynthHost.hpp  SynthMain.cpp  SynthMain.hpp  SynthModule.cpp  SynthModule.hpp  ThreadUtils.hpp  UnixEntry.cpp  Utils.cpp  Utils.hpp  WDMDrv.cpp  WDMDrv.hpp  WDMEntry.cpp  WDMEntry.hpp  XSynthM.cpp  XSynthM.hpp  bass.cpp  bassasio.cpp  bassmidi.cpp  basswasapi.cpp  resource.h  xsynth.cpp
OmniMIDI/src/audio/: AudioPlayer.cpp  AudioPlayer.hpp  BufferedRenderer.cpp  BufferedRenderer.hpp  Limiter.cpp  Limiter.hpp  NpsLimiter.cpp  NpsLimiter.hpp
OmniMIDI/src/synth/: SynthHost.cpp  SynthHost.hpp  SynthModule.cpp  SynthModule.hpp
OmniMIDI/src/synth/bassmidi/: BASSInstance.cpp  BASSInstance.hpp  BASSSettings.cpp  BASSSettings.hpp  BASSSynth.cpp  BASSSynth.cpp.bak  BASSSynth.hpp  BASSSynth.hpp.bak  BASSThreadMgr.cpp  BASSThreadMgr.hpp  bass.cpp  bassasio.cpp  bassmidi.cpp  basswasapi.cpp
OmniMIDI/src/synth/fluidsynth/: FluidSynth.cpp  FluidSynth.hpp  libfluidsynth.cpp
OmniMIDI/src/synth/plugin/: PluginSynth.cpp  PluginSynth.hpp
OmniMIDI/src/synth/xsynth/: XSynthM.cpp  XSynthM.hpp  xsynth.cpp
OmniMIDI/src/system/: ShakraPipe.cpp  ShakraPipe.hpp  StreamPlayer.cpp  StreamPlayer.hpp  UnixEntry.cpp  WDMDrv.cpp  WDMDrv.hpp  WDMEntry.cpp  WDMEntry.hpp
OmniMIDI/winelib/: KDMAPI_WineLib.c  OmniMIDI.spec  compile.sh
OmniMIDIConfigurator/: CMakeLists.txt  CMakePresets.json  vcpkg.json
OmniMIDIConfigurator/src/: CMakeLists.txt  aboutwindow.cpp  aboutwindow.ui  bassconfig.cpp  bassconfig.h  bassmidisettings.cpp  bassmidisettings.h  bassmidisettings.ui  fluidconfig.cpp  fluidconfig.h  fluidsettings.cpp  fluidsettings.h  fluidsettings.ui  icons.qrc  kdmapi.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  omconfig.cpp  omconfig.h  sflistconfig.cpp  sflistconfig.h  sflistitem.cpp  sflistitem.h  sfsettings.cpp  sfsettings.h  sfsettings.ui  soundfontlist.cpp  soundfontlist.h  synthsettings.h  utils.cpp  utils.h  version.h.in  xsynthconfig.cpp  xsynthconfig.h  xsynthsettings.cpp  xsynthsettings.h  xsynthsettings.ui
OmniMIDIConfigurator/src/custom-widgets/: samplerateselector.cpp  samplerateselector.h  soundfontlist.cpp  soundfontlist.h
